sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for(i<-0 to getNombreValeurs()-1)
  {
    var j=i;
    while(plusPetit(j+1,j) && j>1)
    {
      echanger(j+1,j);
      j-=1;
    }
  }
}